apps/velocita/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocita
  namespace: default
  labels:
    app.kubernetes.io/name: velocita
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: velocita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: velocita
    spec:
      imagePullSecrets:
        - name: regcred

      containers:
        - name: velocita
          image: "margarinas/velocita:release"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: google-account-key
              mountPath: /var/www/html/storage/google-account-key 
              readOnly: true
      volumes:
        - name: google-account-key
          secret:
            secretName: velocita-google-account-key
