apps/velocita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: velocita
  namespace: default
  labels:
    app.kubernetes.io/name: velocita
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: velocita
