apps/velocita/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velocita
  namespace: default
  labels:
    app.kubernetes.io/name: velocita
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "velocita.motorsniper.lt"
      secretName: tls-velocita
  rules:
    - host: "velocita.motorsniper.lt"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: velocita
                port:
                  number: 8080
